--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
     "name": "Ex08_RgbLedControl",
     "description": "Control of a RGB LED strip. It uses a Jupiter Model A and a RGB click.",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-contrib-calc": "1.0.3",
+        "node-red-contrib-i2c": "0.7.2",
+        "node-red-contrib-lfo": "1.0.0",
+        "node-red-dashboard": "2.23.0"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flow.json",
